--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-rest-swagger==2.2.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.14
+gunicorn==24.1.1
 idna==3.11
 inflection==0.5.1
 itypes==1.2.0
